; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_net_namespace.c_unregister_pernet_gen_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_net_namespace.c_unregister_pernet_gen_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.TYPE_2__* }
%struct.pernet_operations = type { %struct.TYPE_2__ }

@net_mutex = common dso_local global i32 0, align 4
@first_device = common dso_local global %struct.TYPE_2__* null, align 8
@net_generic_ids = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unregister_pernet_gen_device(i32 %0, %struct.pernet_operations* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pernet_operations*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.pernet_operations* %1, %struct.pernet_operations** %4, align 8
  %5 = call i32 @mutex_lock(i32* @net_mutex)
  %6 = load %struct.pernet_operations*, %struct.pernet_operations** %4, align 8
  %7 = getelementptr inbounds %struct.pernet_operations, %struct.pernet_operations* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @first_device, align 8
  %9 = icmp eq %struct.TYPE_2__* %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @first_device, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  store %struct.TYPE_2__* %13, %struct.TYPE_2__** @first_device, align 8
  br label %14

14:                                               ; preds = %10, %2
  %15 = load %struct.pernet_operations*, %struct.pernet_operations** %4, align 8
  %16 = call i32 @unregister_pernet_operations(%struct.pernet_operations* %15)
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @ida_remove(i32* @net_generic_ids, i32 %17)
  %19 = call i32 @mutex_unlock(i32* @net_mutex)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @unregister_pernet_operations(%struct.pernet_operations*) #1

declare dso_local i32 @ida_remove(i32*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
